# pulsar-client

./: .gitignore  CMakeLists.txt  build-linux.ps1  build-win.sh  download-sysroot.ps1  readme.md
.github/workflows/: cmake-multi-platform.yml
cmake/: copy_linux_deps.cmake
src/: defines  main.cpp
src/API/: PulsarAPI.hpp
src/Console/: Console.hpp  Fastfetch.hpp  console_defines
src/Encryption/: Algorithms.hpp  Asymmetrical.hpp  EndPoint.hpp  Keys.hpp  Random.hpp  Symmetrical.hpp  static
src/Graphics/: ChatList.hpp  Chatlist.hpp  MessageBox.hpp  Msg.hpp  Text.hpp  Window.hpp  WindowBase.hpp  graphic_constants  window.hpp
src/Network/: Checker.hpp  Client.hpp  Database.hpp  Encryption.hpp
src/Other/: Chat.hpp  Datetime.hpp  Message.hpp  Profile.hpp
src/lib/: hash.h  jsonToString.hpp
